package com.gmail.webrsb.cardpack;

import com.gmail.webrsb.card.Card;

public interface DrawAble {
    /**
     * get the first Card of List
     * @return Card
     */
    public Card draw();
}
