package com.gmail.webrsb.cardpack.child;

import com.gmail.webrsb.cardpack.CardPack;

import java.util.ArrayList;

public class Hand extends CardPack {
    public Hand() {
        super();
    }

    public Hand(ArrayList cards) {
        super(cards);
    }
}
